--- a/src/html/alert.html
+++ b/src/html/alert.html
@@ -20,7 +20,10 @@
             </div>
         </main>
         @@include('../partial/global/_footer.html')
-        <!-- global -->
-        @@include('../partial/global/_js.html')
+        <script>
+            function closeWindow() {
+                window.close();
+            }
+        </script>
     </body>
 </html>
