--- a/src/html/success.html
+++ b/src/html/success.html
@@ -7,12 +7,23 @@
                     <div class="h3 text-center">
                         成功加入會員
                     </div>
-                    <div class="lead">
+                    <div class="lead text-justify">
                         <p>感謝您的填寫！提醒您若非事前約定，金門酒廠不會以任何名義致電您，以下為常見詐騙手法：</p>
                         <p>（一）利用電話、簡訊等方式核對任何消費與財務等其他私人資訊</p>
                         <p>（二）以任何理由要求操作ATM或臨櫃、網路銀行匯款等事項</p>
                         <p class="mb-40">若有疑慮建議撥打反詐騙專線165取得協助！</p>
-                        <p>Be alert to the fact that scams exist. When dealing with uninvited contacts, always consider the possibility that the approach may be a scam, or dial 165 to confirm.</p>
+                        <p>
+                            Thank you for submission! Kinmen Kaoliang Liquor will not contact you in any way. Please be aware of common fraudulent practices:
+                        </p>
+                        <p>
+                            (I) Requesting verification of personal information, such as consumption and financial details, through phone calls, text messages, or other means.
+                        </p>
+                        <p>
+                            (II) Requesting ATM operations, bank counter transactions, online banking transfers, or any other transactions for any reason.
+                        </p>
+                        <p>
+                            If you have any concerns, we recommend calling the anti-fraud hotline at 165 for assistance!
+                        </p>
                     </div>
                 </div>
                 <div class="d-flex gap-12 col-6 mx-auto">
